--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -340,25 +340,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/force_of_will.tex:94
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
-#| "  \\item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.\n"
-#| "  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
-#| "  \\begin{itemize}\n"
-#| "    \\item \\textbf{Easy:} 1 × \\azure\\, 2 × \\silver\\, 1 × \\bronze\\\n"
-#| "    \\item \\textbf{Normal:} 1 × \\azure\\, 1 × \\golden\\, 2 × \\silver\\\n"
-#| "    \\item \\textbf{Hard:} 1 × \\azure\\, 3 × \\golden\\\n"
-#| "    \\item \\textbf{Impossible:}  2 × \\azure\\, 2 × \\golden\\\n"
-#| "  \\end{itemize}\n"
-#| "  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
-#| "  \\begin{itemize}\n"
-#| "    \\item Place up to 4 of your Unit Cards freely onto the center row of the Combat Board.\n"
-#| "    \\item The enemy player controlling the Neutral Units places each Neutral Unit in each of the 4 corners of the Combat Board.\n"
-#| "  \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
@@ -382,6 +364,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Gdy gracz Odwiedza Obelisk, rzuca 2 \\svg{treasure} i wybiera jeden wynik.\n"
 "  \\item Gracz nie może użyć Karty Dyplomacji, aby ominąć Walkę na polu Smoczej Utopii.\n"
+"  \\columnbreak\n"
 "  \\item Gdy Bohater przemieszcza się na pole Smoczej Utopii, musi walczyć z następującą liczbą Neutralnych Jednostek w zależności od wybranego poziomu trudności:\n"
 "  \\begin{itemize}\n"
 "    \\item \\textbf{Łatwy:} 1 × \\azure\\, 2 × \\silver\\, 1 × \\bronze\\\n"
