--- a/translations/the_fractured_kingdoms.tex/pl.po
+++ b/translations/the_fractured_kingdoms.tex/pl.po
@@ -349,6 +349,8 @@ msgid ""
 "[overlay, remember picture]\n"
 "\n"
 msgstr ""
+"[overlay, remember picture]\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:100
@@ -364,6 +366,15 @@ msgid ""
 "  }\n"
 "\n"
 msgstr ""
+"  \\newcommand{\\blocked}[3]{%\n"
+"    % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle\n"
+"    \\begin{scope}[shift={(#1,#2)}, rotate=#3]\n"
+"      \\draw[draw=darkyellow, thick, pattern=north east lines, pattern color=darkyellow]\n"
+"        (0:0.56cm) -- (60:0.56cm) -- (120:0.56cm) --\n"
+"        (180:0.56cm) -- (240:0.56cm) -- (300:0.56cm) -- cycle;\n"
+"    \\end{scope}\n"
+"  }\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:106
@@ -415,6 +426,9 @@ msgid ""
 "  \\arrow{14.4}{-17.6}{38}\n"
 "\n"
 msgstr ""
+"  \\arrow{12.35}{-15.7}{-142}\n"
+"  \\arrow{14.4}{-17.6}{38}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:118
@@ -424,6 +438,9 @@ msgid ""
 "  \\arrow{16.2}{-8.55}{108}\n"
 "\n"
 msgstr ""
+"  \\arrow{13.91}{-9.95}{-72}\n"
+"  \\arrow{16.2}{-8.55}{108}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:121
@@ -433,6 +450,9 @@ msgid ""
 "  \\arrow{8.75}{-6.9}{4}\n"
 "\n"
 msgstr ""
+"  \\arrow{8.2}{-4.35}{-176}\n"
+"  \\arrow{8.75}{-6.9}{4}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:124
@@ -442,6 +462,9 @@ msgid ""
 "  \\arrow{4.2}{-10.75}{81}\n"
 "\n"
 msgstr ""
+"  \\arrow{1.5}{-10.35}{-99}\n"
+"  \\arrow{4.2}{-10.75}{81}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:127
@@ -451,6 +474,9 @@ msgid ""
 "  \\arrow{5.45}{-18.7}{-25}\n"
 "\n"
 msgstr ""
+"  \\arrow{6.65}{-16.1}{155}\n"
+"  \\arrow{5.45}{-18.7}{-25}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:129
@@ -459,6 +485,8 @@ msgid ""
 "  \\blocked{7.05}{-8.85}{-25.5}\n"
 "\n"
 msgstr ""
+"  \\blocked{7.05}{-8.85}{-25.5}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:131
@@ -467,6 +495,8 @@ msgid ""
 "  \\blocked{11.40}{-8.87}{23}\n"
 "\n"
 msgstr ""
+"  \\blocked{11.40}{-8.87}{23}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:133
@@ -475,6 +505,8 @@ msgid ""
 "  \\blocked{12.69}{-13.12}{67.7}\n"
 "\n"
 msgstr ""
+"  \\blocked{12.69}{-13.12}{67.7}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:135
@@ -483,6 +515,8 @@ msgid ""
 "  \\blocked{9.135}{-15.58}{0}\n"
 "\n"
 msgstr ""
+"  \\blocked{9.135}{-15.58}{0}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:137
@@ -491,3 +525,5 @@ msgid ""
 "  \\blocked{5.58}{-13.01}{-71}\n"
 "\n"
 msgstr ""
+"  \\blocked{5.58}{-13.01}{-71}\n"
+"\n"
