--- a/translations/credits.tex/pl.po
+++ b/translations/credits.tex/pl.po
@@ -146,13 +146,10 @@ msgstr ""
 
 #. type: multicols*
 #: sections/credits.tex:30
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\includegraphics[width=1.3\\linewidth]{\\art/genie.png}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "{\\tikz[transparency group]\\node[opacity=0.2]{\\includegraphics[width=1.3\\linewidth]{\\art/genie.png}};}\n"
 "\n"
 msgstr ""
-"\\includegraphics[width=1.3\\linewidth]{\\art/genie.png}\n"
+"{\\tikz[transparency group]\\node[opacity=0.2]{\\includegraphics[width=1.3\\linewidth]{\\art/genie.png}};}\n"
 "\n"
