--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -988,16 +988,7 @@ msgstr ""
 
 #. type: tikzpicture
 #: campaigns/inferno_steadwicks_fall.tex:267
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, yshift=37em, opacity=0.17] at (current page.south) {\n"
-#| "    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_shield.png}\n"
-#| "  };\n"
-#| "  \\node(map)[anchor=center] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\textwidth]{\\maps/inferno_steadwicks_fall.png}\n"
-#| "  };\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
 "  \\node(bg)[anchor=center, yshift=37em, opacity=0.07] at (current page.south) {\n"
@@ -1009,7 +1000,7 @@ msgid ""
 "\n"
 msgstr ""
 "[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, yshift=37em, opacity=0.17] at (current page.south) {\n"
+"  \\node(bg)[anchor=center, yshift=37em, opacity=0.07] at (current page.south) {\n"
 "    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_shield.png}\n"
 "  };\n"
 "  \\node(map)[anchor=center] at (current page.center) {\n"
