--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -492,12 +492,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:114
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  \\includegraphics[width=\\linewidth]{\\art/dimension_door.png}\n"
-#| "\\end{center}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{center}\n"
 "  \\transparent{0.2}{\\includegraphics[width=\\linewidth]{\\art/dimension_door.png}}\n"
@@ -505,7 +500,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{center}\n"
-"  \\includegraphics[width=\\linewidth]{\\art/dimension_door.png}\n"
+"  \\transparent{0.2}{\\includegraphics[width=\\linewidth]{\\art/dimension_door.png}}\n"
 "\\end{center}\n"
 "\n"
 
@@ -601,25 +596,16 @@ msgstr ""
 
 #. type: center
 #: coops/titans_stronghold.tex:199
-#, fuzzy
-#| msgid ""
-#| "\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, "
-#| "keepaspectratio]{\\art/land_mine.png}}"
 msgid ""
 "\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 msgstr ""
-"\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
+"\\transparent{0.2}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 
 #. type: tikzpicture
 #: coops/titans_stronghold.tex:207
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, opacity=0.15] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\paperwidth, keepaspectratio]{\\art/hellstorm_helmet.png}\n"
-#| "  };"
+#, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
 "  \\node(bg)[anchor=center, opacity=0.07] at (current page.center) {\n"
@@ -627,7 +613,7 @@ msgid ""
 "  };"
 msgstr ""
 "[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, opacity=0.15] at (current page.center) {\n"
+"  \\node(bg)[anchor=center, opacity=0.07] at (current page.center) {\n"
 "    \\includegraphics[width=\\paperwidth, keepaspectratio]{\\art/hellstorm_helmet.png}\n"
 "  };"
 
